--- a/mobile.css
+++ b/mobile.css
@@ -31,6 +31,57 @@ h1 {
 
 }
 
+.form {
+    display:block;
+    position: relative;
+    z-index: 100;
+    background-color: transparent;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    mix-blend-mode: difference;
+    margin-top:305%;
+	margin-bottom:35%;
+	right:12%;
+
+}
+.form:hover {
+    mix-blend-mode: normal;
+}
+.form:focus{
+    mix-blend-mode: normal;
+}
+.form1:hover {
+    mix-blend-mode: normal;
+}
+.form1:focus{
+    mix-blend-mode: normal;
+}
+.form:active {
+    mix-blend-mode: normal;
+}
+.form1:active {
+    mix-blend-mode: normal;
+}
+
+.contact1 {
+	color:white;
+}
+
+.form1 {
+    display:block;
+    position: relative;
+    z-index: 100;
+    background-color: transparent;
+    justify-content: center;
+    align-items: center;
+    width:fit-content;
+    height: fit-content;
+    top:60%;
+    margin-top: 60%;
+    left:20%;
+
+}
 .about1 {
 	width:100%;
 	left:0;
@@ -82,7 +133,42 @@ h1 {
 	z-index: 10;
 	overflow: visible;
 }
+.abouttext3 {
+	width: 60%;
+	left: 5%;
+	position: relative;
+	top: 70%;
+	color: white;
+	font-size: 15vw;  
+	z-index: 10;
+	overflow: visible;
+}
+.abouttext4 {
+	width: 60%;
+	left: 5%;
+	position: relative;
+	top: 77%;
+	margin-bottom: 15%;
+	color: white;
+	font-size: 5vw;  
+	z-index: 10;
+	overflow: visible;
+}
 
+.linkbottom{
+	width: 60%;
+	left: 5%;
+	position: relative;
+	display: block;
+	top: 87%;
+	height:15%;
+	margin-bottom: 40%;
+	bottom:20%;
+	color: white;
+	font-size: 3vw;  
+	z-index: 10;
+	overflow: visible;
+}
 
 .logobutton {
 	width:100%;
@@ -109,7 +195,8 @@ h1 {
 	height: fit-content;
 	position: fixed;
 	z-index: 1001;
-	padding: 5% 5% 15% 5%
+	padding: 5% 5% 15% 5%;
+	mix-blend-mode: difference;
 }
 
 .pagetitles {
@@ -121,6 +208,7 @@ h1 {
 	width:90%;
 	height:80%;
 	margin-top:30%;
+	mix-blend-mode: difference;
 }
 .cars {
 	width:5%;
@@ -179,6 +267,7 @@ h1 {
 	justify-content: center;
 	margin-left:5%;
 	margin-top:97%;
+	mix-blend-mode: difference;
 }
 .title2 {
 	width:30%;
@@ -309,6 +398,7 @@ header {
 	color:white;
 	text-decoration: none;
 	text-decoration: bold;
+	
 }
 
 
@@ -332,7 +422,21 @@ header {
 	position: relative;
 	margin-top:165%;
 }
+.works3 {
+	width:80%;
+	height:fit-content;
+	position: relative;
+	margin-top:35%;
+}
 .workspic2 {
+	width:80%;
+	height:20%;
+	background-color: aliceblue;
+	left:10%;
+	position: relative;
+
+}
+.workspic3 {
 	width:80%;
 	height:20%;
 	background-color: aliceblue;
@@ -367,4 +471,23 @@ header {
 	max-width: 65%;
 	text-decoration: none;
 	
+}
+
+.videocol {
+	max-width: 70%;
+	z-index: 100;
+	display: block;
+	position: relative;
+	top:80%;
+	left:5%;
+	margin-bottom:15%;
+	bottom:15%;
+}
+
+.videocollagetext {
+	font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+	position: relative;
+	color: white;
+	top:20%;
 }
