--- a/mobile.css
+++ b/mobile.css
@@ -491,3 +491,27 @@ header {
 	color: white;
 	top:20%;
 }
+
+.dondaposters {
+	width:70%;
+	height:200%;
+	display:block;
+	position: relative;
+	top:80%;
+}
+.donda1 {
+	max-width:80%;
+	width: 80%;
+	left:5%;
+	margin-bottom:5%;
+	height:fit-content;
+	display: block;
+	position: relative;
+}
+.donda2 {
+	width:25%;
+	left:5%;
+	height:auto;
+	display: inline-flex;
+	position: relative;
+}
