--- a/mobile.css
+++ b/mobile.css
@@ -504,7 +504,7 @@ header {
 	width: 80%;
 	left:5%;
 	margin-bottom:5%;
-	height:fit-content;
+	height:auto;
 	display: block;
 	position: relative;
 }
