--- a/mobile.css
+++ b/mobile.css
@@ -494,22 +494,21 @@ header {
 
 .dondaposters {
 	width:70%;
-	height:200%;
+	height:400%;
 	display:block;
 	position: relative;
 	top:80%;
 }
-.donda1 {
-	max-width:80%;
-	width: 80%;
-	left:5%;
-	margin-bottom:5%;
-	height:auto;
-	display: block;
-	position: relative;
-}
+
 .donda2 {
 	width:25%;
+	left:5%;
+	height:auto;
+	display: inline-flex;
+	position: relative;
+}
+.donda1 {
+	width:75%;
 	left:5%;
 	height:auto;
 	display: inline-flex;
