--- a/mobile.css
+++ b/mobile.css
@@ -143,6 +143,17 @@ h1 {
 	z-index: 10;
 	overflow: visible;
 }
+.abouttext5 {
+	width: 60%;
+	left: 5%;
+	position: relative;
+	top: 70%;
+	color: white;
+	font-size: 13vw;  
+	z-index: 10;
+	overflow: visible;
+}
+
 .abouttext4 {
 	width: 60%;
 	left: 5%;
@@ -160,10 +171,38 @@ h1 {
 	left: 5%;
 	position: relative;
 	display: block;
-	top: 87%;
-	height:15%;
 	margin-bottom: 40%;
+	height:20%;
 	bottom:20%;
+	color: white;
+	font-size: 3vw;  
+	z-index: 10;
+	overflow: visible;
+}
+
+
+.linkbottom1{
+	width: 60%;
+	left: 5%;
+	position: relative;
+	display: block;
+	margin-bottom: 40%;
+	top:100%;
+	height:20%;
+	bottom:20%;
+	color: white;
+	font-size: 3vw;  
+	z-index: 10;
+	overflow: visible;
+}
+.linkbottom2{
+	width: 60%;
+	left: 5%;
+	position: relative;
+	display: block;
+	margin-bottom: 40%;
+	top:80%;
+	height:20%;
 	color: white;
 	font-size: 3vw;  
 	z-index: 10;
@@ -338,6 +377,9 @@ header {
     padding: 60px 20px 20px 20px;
     transition: margin-right 0.5s;
 }
+a {
+	text-decoration: none;
+}
 
 .side-panel {
     position: fixed;
@@ -428,6 +470,24 @@ header {
 	position: relative;
 	margin-top:35%;
 }
+.works4 {
+	width:80%;
+	height:fit-content;
+	position: relative;
+	margin-top:35%;
+}
+.works5 {
+	width:80%;
+	height:fit-content;
+	position: relative;
+	margin-top:35%;
+}
+.works6 {
+	width:80%;
+	height:fit-content;
+	position: relative;
+	margin-top:35%;
+}
 .workspic2 {
 	width:80%;
 	height:20%;
@@ -437,6 +497,33 @@ header {
 
 }
 .workspic3 {
+	width:80%;
+	height:20%;
+	background-color: aliceblue;
+	left:10%;
+	position: relative;
+
+}
+
+.workspic4 {
+	width:80%;
+	height:20%;
+	background-color: aliceblue;
+	left:10%;
+	position: relative;
+
+}
+
+
+.workspic5 {
+	width:80%;
+	height:20%;
+	background-color: aliceblue;
+	left:10%;
+	position: relative;
+
+}
+.workspic6 {
 	width:80%;
 	height:20%;
 	background-color: aliceblue;
@@ -484,6 +571,43 @@ header {
 	bottom:15%;
 }
 
+.dsa1 {
+	max-width: 70%;
+	z-index: 100;
+	display: block;
+	position: relative;
+	top:80%;
+	left:5%;
+	margin-bottom:15%;
+	bottom:15%;
+}
+
+.dsap {
+	max-width: 70%;
+	width: 70%;
+	z-index: 100;
+	display: block;
+	position: relative;
+	top:80%;
+	left:5%;
+	margin-bottom:45%;
+	bottom:15%;
+}
+
+.construct {
+	width:70%;
+	height:200%;
+	top:75%;
+	display: block;
+	position: relative;
+	left:5%;
+}
+.construct1{
+	width:100%;
+	margin-bottom:5%;
+	display: block;
+	position: relative;
+}
 .videocollagetext {
 	font-family: Arial, Helvetica, sans-serif;
 	display: flex;
