--- a/mobile.css
+++ b/mobile.css
@@ -208,6 +208,19 @@ h1 {
 	z-index: 10;
 	overflow: visible;
 }
+.linkbottom3{
+	width: 60%;
+	left: 5%;
+	position: relative;
+	display: block;
+	margin-bottom: 40%;
+	top:80%;
+	height:20%;
+	color: white;
+	font-size: 3vw;  
+	z-index: 10;
+	overflow: visible;
+}
 
 .logobutton {
 	width:100%;
