--- a/mobile.css
+++ b/mobile.css
@@ -7,6 +7,7 @@
 	margin-top:0%;
 	position: relative;
 	max-width:100%;
+	justify-content: center;
 }
 .backgroundvid {
 	width:100%;
@@ -14,11 +15,23 @@
 	z-index: -1;
 }
 
+.background {
+	width:100%;
+	height:100vh;
+	display:block;
+	position: fixed;
+	background-color: rgb(0, 54, 3);
+}
+
 html {
 	margin:0;
 	padding:0;
 	background-color: black;
 	max-width:100%;
+	
+}
+body {
+	height:7000px;
 }
 h1 {
 	color:white;
@@ -112,21 +125,21 @@ h1 {
 
 .abouttext1 {
 	width: 70%;
-	left: 0;
+	left: 5%;
 	position: relative;
-	top: 35%;
+	top: 55%;
 	height: 30%;
 	color: white;
-	font-size: 50vw; 
+	font-size: 40vw; 
 	z-index: 10;
 	overflow: visible;
 }
 
 .abouttext2 {
 	width: 70%;
-	left: 3%;
+	left: 7%;
 	position: relative;
-	top: 0%;
+	top: 24%;
 	height: 30%;
 	color: white;
 	font-size: 10vw;  
@@ -222,12 +235,15 @@ h1 {
 	overflow: visible;
 }
 
-.logobutton {
-	width:100%;
-	display:flex;
-	position: relative;
 
+.logobutton {
+	width:70%;
+	display:flex;
+	position: fixed;
+	left:5%;
+	top:30%;
 }
+
 
 .logobutton2 {
 	width:20%;
@@ -242,14 +258,6 @@ h1 {
 	position: fixed;
 	z-index: 1001;
 }
-.alogo2 {
-	width: fit-content;
-	height: fit-content;
-	position: fixed;
-	z-index: 1001;
-	padding: 5% 5% 15% 5%;
-	mix-blend-mode: difference;
-}
 
 .pagetitles {
 	color:white;
@@ -260,7 +268,6 @@ h1 {
 	width:90%;
 	height:80%;
 	margin-top:30%;
-	mix-blend-mode: difference;
 }
 .cars {
 	width:5%;
@@ -352,7 +359,7 @@ h1 {
 	color:black
 }
 
-.header2, .pagetitles {
+.pagetitles {
     width: 100%;
 }
 
@@ -378,12 +385,16 @@ header {
     z-index: 1000;
 }
 
+
 .menu-icon {
     color: white;
     font-size: 24px;
     padding: 0 20px;
     cursor: pointer;
-	margin-right:2%
+	margin-right:2%;
+	position: fixed;
+	right:5%;
+
 }
 
 .main-content {
@@ -400,7 +411,6 @@ a {
     right: -100px;
     width: 40%;
     border-radius: 10%;
-    background-color: #000000;
     color: white;
     overflow-y: auto;
     transition: right 0.5s;
@@ -458,8 +468,7 @@ a {
 
 
 .imagemenu {
-	padding-top:5%;
-	margin-right:15%;
+	right:5%;
 }
 
 .works1 {
@@ -684,4 +693,32 @@ a {
 	width: 100%;
 	font-size: 10vw;
 	color: aliceblue;
+}
+
+.scrolllogo { 
+	position: absolute;
+	top: 5%; 
+	left: 5%; 
+	width: 25%;
+	align-items: center;
+	justify-content: center;
+	height: fit-content;
+	z-index: 1001;
+}
+
+.sitetitle1 {
+	color:white;
+	font-size: 8vw;
+	margin-top:70%;
+	display: block;
+	position: fixed;
+	mix-blend-mode: difference;
+}
+.sitetitle2 {
+	color:white;
+	font-size: 3vw;
+	margin-top:93%;
+	margin-left:20%;
+	display: block;
+	position: fixed;
 }
