--- a/style.css
+++ b/style.css
@@ -230,10 +230,11 @@ h1 {
 }
 
 .logobutton {
-	width:100%;
+	width:25%;
 	display:flex;
-	position: relative;
-
+	position: fixed;
+	left:5%;
+	top:25%;
 }
 
 .logobutton2 {
@@ -262,18 +263,7 @@ h1 {
 	mix-blend-mode: difference;
 }
 
-.pagetitles {
-	color:white;
-	z-index:10;
-	max-width:90%;
-	display:block;
-	position: absolute;
-	width:50%;
-	height:80%;
-    right:0%;
-	margin-top:5%;
-	mix-blend-mode: difference;
-}
+
 .cars {
 	width:3%;
 	margin-top:-50%;
@@ -318,19 +308,47 @@ h1 {
 
 .titles {
 	text-wrap: wrap;
-	display:flex;
+	display:inline-flex;
 	position: relative;
+	width:50%;
+	left:50%;
 	
 }
 
+.pagetitles {
+	color:white;
+	z-index:10;
+	text-wrap: wrap;
+	display:inline-flex;
+	position: relative;
+	width:75%;
+	left:35%;
+	top:20%
+	
+}
+
+@media (max-width: 900px) {
+	.pagetitles {
+		color:white;
+	z-index:10;
+	text-wrap: wrap;
+	display:flex;
+	position: relative;
+	width:75%;
+	left:35%;
+	top:20%;
+	height:25%;
+	
+	}
+  }
+
 .title1 {
-	width:20%;
+	width:25%;
 	margin-bottom:15%;
-	align-items: center;
-	align-self: center;
-	justify-content: center;
-	margin-left:55%;
+	margin-left:25%;
 	mix-blend-mode: difference;
+	display:inline-flex;
+	position: relative;
 }
 .title1:hover{
     mix-blend-mode: normal;
@@ -342,12 +360,13 @@ h1 {
     transition-duration: 0.5s;
 }
 .title2 {
-	width:20%;
+	width:25%;
 	margin-bottom:15%;
-	align-items: center;
-	align-self: center;
-	justify-content: center;
-	margin-left:55%;
+	margin-left:25%;
+	mix-blend-mode: difference;
+	display:inline-flex;
+	position: relative;
+
 }
 .title1:hover {
 	-webkit-text-stroke: white;
@@ -372,9 +391,6 @@ h1 {
 	color:black
 }
 
-.header2, .pagetitles {
-    width: 100%;
-}
 
 
 body, html {
@@ -398,6 +414,15 @@ header {
     z-index: 1000;
 }
 
+.background {
+	justify-content: center;
+	align-items: center;
+	display: block;
+	position: absolute;
+	top:25%;
+	left:7%;
+}
+
 .menu-icon {
     color: white;
     font-size: 24px;
@@ -416,9 +441,24 @@ a {
 
 .side-panel {
     position: fixed;
-    top: 45%;
+    top: 35%;
     right: -24%;
     width: 40%;
+    border-radius: 10%;
+    background-color:transparent;
+    color: white;
+    overflow-y: auto;
+    transition: right 0.5s;
+    z-index: 999;
+}
+
+.side-panel-home {
+    position: absolute;
+    top: 45%;
+    right: 24%;
+    width: 40%;
+	width:25%;
+	height:25%;
     border-radius: 10%;
     background-color:transparent;
     color: white;
@@ -475,6 +515,24 @@ a {
 	text-decoration: bold;
 	
 }
+
+.sitetitle1 {
+	color:white;
+	font-size: 3vw;
+	margin-top:10%;
+	display: block;
+	position: fixed;
+	mix-blend-mode: difference;
+}
+.sitetitle2 {
+	color:white;
+	font-size: 1vw;
+	margin-top:14%;
+	margin-left:20%;
+	display: block;
+	position: fixed;
+}
+
 
 
 .imagemenu {
@@ -740,4 +798,15 @@ a {
 	display: inline-flex;
 	position: relative;
 	margin-bottom:5%;
+}
+
+.scrolllogo { 
+	position: absolute;
+	top: 5%; 
+	left: 5%; 
+	width: 25%;
+	align-items: center;
+	justify-content: center;
+	height: fit-content;
+	z-index: 1001;
 }
