--- a/style.css
+++ b/style.css
@@ -821,13 +821,13 @@ a {
 
 .projectphotos {
 	width:100%;
-	height:30%;
-	bottom:0%;
+	height:20%;
+	bottom:15%;
 	display: block;
 	position: absolute;
 	align-items: center;
 	justify-content: center;
-	background-color: dodgerblue;
+	background-color: transparent;
 }
 
 .ppimage1 {
@@ -835,9 +835,24 @@ a {
 	position: relative;
 	align-items: center;
 	justify-content: center;
-	width: 10%;
-	top:20%; 
-	animation: ppimage1 8s linear infinite;
+	width: 12%;
+	top:23%; 
+	animation: ppimage1 12s 6s linear infinite;
+	left:-40vw;
+	border-style: solid;
+	border-color: white;
+	border-width: .4vw;
+	background-color:white;
+	color:black;
+	text-align: center;
+	opacity:1;
+}
+.ppimage11 {
+	width:100%;
+	height:auto;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
 }
 
 .ppimage2 {
@@ -845,8 +860,24 @@ a {
 	position: relative;
 	align-items: center;
 	justify-content: center;
-	width: 10%;
-	top:20%; 
+	width: 12%;
+	top:23%; 
+	animation: ppimage2 12s 4s linear infinite;
+	left:-40vw;
+	border-style: solid;
+	border-color: white;
+	border-width: .4vw;
+	background-color:white;
+	opacity:1;
+	text-align: center;
+}
+
+.ppimage22 {
+	width:100%;
+	height:auto;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
 }
 
 .ppimage3 {
@@ -854,15 +885,106 @@ a {
 	position: relative;
 	align-items: center;
 	justify-content: center;
-	width: 10%;
-	top:20%; 
+	width: 12%;
+	top:23%; 
+	animation: ppimage3 12s 2s linear infinite;
+	left:-40vw;
+	border-style: solid;
+	border-color: white;
+	border-width: .4vw;
+	background-color:white;
+	margin-bottom:0;
+	padding-bottom:0;
+	opacity:1;
+	text-align: center;
+}
+
+.ppimage33 {
+	width:100%;
+	height:auto;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+}
+
+.textppimage {
+	color:black;
+	font-size:1vw;
+}
+.textppimage:hover {
+	color:white;
+	transition-duration: 0.5s;
+}
+
+.textppimage2 {
+	color:black;
+	font-size:1vw;
+}
+.textppimage2:hover {
+	color:white;
+	transition-duration: 0.5s;
+}
+
+
+
+.ppimage1:hover {
+	opacity:0.8;
+	border-style: solid;
+	border-color: rgb(0, 0, 0);
+	transition-duration: 0.5s;
+	color:white;
+	width:14%;
+}
+.ppimage2:hover {
+	opacity:0.8;
+	border-style: solid;
+	border-color: rgb(0, 0, 0);
+	transition-duration: 0.5s;
+	color:white;
+	width:14%;
+}
+.ppimage3:hover {
+	opacity:0.8;
+	border-style: solid;
+	border-color: rgb(0, 0, 0);
+	transition-duration: 0.5s;
+	color:white;
+	width:14%;
 }
 
 @keyframes ppimage1 {
 	0% {
-		transform: translateX(0vw);
+		transform: translateX(-20vw);
+	}
+	75% {
+		opacity:1;
 	}
 	100% {
-		transform: translateX(100vw);
+		transform: translateX(120vw);
+		opacity:0;
+	}
+}
+@keyframes ppimage2 {
+	0% {
+		transform: translateX(-20vw);
+	}
+	75% {
+		opacity:1;
+	}
+	100% {
+		transform: translateX(120vw);
+		opacity:0;
+	}
+}
+@keyframes ppimage3 {
+	0% {
+		transform: translateX(-20vw);
+	}
+	75% {
+		opacity:1;
+	}
+	100% {
+		transform: translateX(120vw);
+		opacity:0;
 	}
 }
