--- a/style.css
+++ b/style.css
@@ -46,8 +46,21 @@ h1 {
     align-items: center;
     color:white;
     mix-blend-mode: difference;
-    margin-top:110%;
+    margin-top:105%;
 	margin-bottom:35%;
+
+}
+
+.form1 {
+    display:block;
+    position: relative;
+    z-index: 100;
+    background-color: transparent;
+    justify-content: center;
+    align-items: center;
+	width: 30%;
+    height: fit-content;
+    left:7%;
 
 }
 .form:hover {
@@ -73,22 +86,14 @@ h1 {
 	color:white;
 	display: block;
 	position: relative;
-	font-size: 4vw;
-	top:100%;
+	font-size: 3vw;
+	top:20%;
+	margin-top:0;
+	margin-bottom:5%;
+	left:7%;
 }
 
-.form1 {
-    display:block;
-    position: relative;
-    z-index: 100;
-    background-color: transparent;
-    justify-content: center;
-    align-items: center;
-	width: 70%;
-    height: fit-content;
-    left:20%;
 
-}
 .about1 {
 	width:100%;
 	left:0;
@@ -146,6 +151,26 @@ h1 {
 	font-size: 3vw;  
 	z-index: 10;
 	overflow: visible;
+}
+.abouttext22 {
+	width: 70%;
+	left: 5%;
+	position: relative;
+	height: auto;
+	margin-top:0%;
+	color: white;
+	font-size: 3vw;  
+	z-index: 10;
+	overflow: visible;
+	text-align: end;
+}
+
+.aboutimg1 {
+	width:70%;
+	left:5%;
+	position: relative;
+	display: auto;
+	margin-bottom: 5%;
 }
 
 .abouttext3 {
@@ -231,6 +256,18 @@ h1 {
 	display: block;
 	height:20%;
 	margin-top:120%;
+	color: white;
+	font-size: 1vw;  
+	z-index: 10;
+	overflow: visible;
+}
+.linkbottom4{
+	width: 60%;
+	left: 5%;
+	position: absolute;
+	display: block;
+	height:20%;
+	bottom: -280%;
 	color: white;
 	font-size: 1vw;  
 	z-index: 10;
@@ -821,24 +858,25 @@ a {
 
 .projectphotos {
 	width:100%;
-	height:20%;
-	bottom:15%;
+	height:30%;
+	bottom:5%;
+	left:-100vw;
 	display: block;
 	position: absolute;
 	align-items: center;
 	justify-content: center;
+	text-align: center;
 	background-color: transparent;
 }
 
 .ppimage1 {
 	display: inline-flex;
-	position: relative;
+	position: absolute;
 	align-items: center;
 	justify-content: center;
 	width: 12%;
 	top:23%; 
-	animation: ppimage1 12s 6s linear infinite;
-	left:-40vw;
+	animation: ppimage1 24s 22s linear infinite;
 	border-style: solid;
 	border-color: white;
 	border-width: .4vw;
@@ -846,6 +884,7 @@ a {
 	color:black;
 	text-align: center;
 	opacity:1;
+	margin-left:8%;
 }
 .ppimage11 {
 	width:100%;
@@ -857,19 +896,19 @@ a {
 
 .ppimage2 {
 	display: inline-flex;
-	position: relative;
+	position: absolute;
 	align-items: center;
 	justify-content: center;
 	width: 12%;
 	top:23%; 
-	animation: ppimage2 12s 4s linear infinite;
-	left:-40vw;
+	animation: ppimage2 24s 18s linear infinite;
 	border-style: solid;
 	border-color: white;
 	border-width: .4vw;
 	background-color:white;
 	opacity:1;
 	text-align: center;
+	margin-left:8%;
 }
 
 .ppimage22 {
@@ -882,13 +921,12 @@ a {
 
 .ppimage3 {
 	display: inline-flex;
-	position: relative;
+	position: absolute;
 	align-items: center;
 	justify-content: center;
 	width: 12%;
 	top:23%; 
-	animation: ppimage3 12s 2s linear infinite;
-	left:-40vw;
+	animation: ppimage3 24s 14s linear infinite;
 	border-style: solid;
 	border-color: white;
 	border-width: .4vw;
@@ -897,9 +935,91 @@ a {
 	padding-bottom:0;
 	opacity:1;
 	text-align: center;
+	margin-left:8%;
 }
 
 .ppimage33 {
+	width:100%;
+	height:auto;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+}
+
+.ppimage4 {
+	display: inline-flex;
+	position: absolute;
+	align-items: center;
+	justify-content: center;
+	width: 12%;
+	top:23%; 
+	animation: ppimage4 24s 10s linear infinite;
+	border-style: solid;
+	border-color: white;
+	border-width: .4vw;
+	background-color:white;
+	margin-bottom:0;
+	padding-bottom:0;
+	opacity:1;
+	text-align: center;
+	margin-left:8%;
+}
+
+.ppimage44 {
+	width:100%;
+	height:auto;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+}
+
+.ppimage5 {
+	display: inline-flex;
+	position: absolute;
+	align-items: center;
+	justify-content: center;
+	width: 12%;
+	top:23%; 
+	animation: ppimage5 24s 6s linear infinite;
+	border-style: solid;
+	border-color: white;
+	border-width: .4vw;
+	background-color:white;
+	margin-bottom:0;
+	padding-bottom:0;
+	opacity:1;
+	text-align: center;
+	margin-left:8%;
+}
+
+.ppimage55 {
+	width:100%;
+	height:auto;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+}
+
+.ppimage6 {
+	display: inline-flex;
+	position: absolute;
+	align-items: center;
+	justify-content: center;
+	width: 12%;
+	top:23%; 
+	animation: ppimage6 24s 2s linear infinite;
+	border-style: solid;
+	border-color: white;
+	border-width: .4vw;
+	background-color:white;
+	margin-bottom:0;
+	padding-bottom:0;
+	opacity:1;
+	text-align: center;
+	margin-left:8%;
+}
+
+.ppimage66 {
 	width:100%;
 	height:auto;
 	align-items: center;
@@ -951,40 +1071,186 @@ a {
 	color:white;
 	width:14%;
 }
+.ppimage4:hover {
+	opacity:0.8;
+	border-style: solid;
+	border-color: rgb(0, 0, 0);
+	transition-duration: 0.5s;
+	color:white;
+	width:14%;
+}
+.ppimage5:hover {
+	opacity:0.8;
+	border-style: solid;
+	border-color: rgb(0, 0, 0);
+	transition-duration: 0.5s;
+	color:white;
+	width:14%;
+}
+.ppimage6:hover {
+	opacity:0.8;
+	border-style: solid;
+	border-color: rgb(0, 0, 0);
+	transition-duration: 0.5s;
+	color:white;
+	width:14%;
+}
 
 @keyframes ppimage1 {
 	0% {
 		transform: translateX(-20vw);
-	}
-	75% {
 		opacity:1;
 	}
+	65% {
+		opacity:1;
+	}
+	80% {
+		opacity:0;
+	}
 	100% {
-		transform: translateX(120vw);
+		transform: translateX(180vw);
 		opacity:0;
 	}
 }
 @keyframes ppimage2 {
 	0% {
 		transform: translateX(-20vw);
-	}
-	75% {
 		opacity:1;
 	}
+	65% {
+		opacity:1;
+	}
+	80% {
+		opacity:0;
+	}
 	100% {
-		transform: translateX(120vw);
+		transform: translateX(180vw);
 		opacity:0;
 	}
 }
 @keyframes ppimage3 {
 	0% {
 		transform: translateX(-20vw);
-	}
-	75% {
 		opacity:1;
 	}
-	100% {
-		transform: translateX(120vw);
+	65% {
+		opacity:1;
+	}
+	80% {
 		opacity:0;
 	}
+	100% {
+		transform: translateX(180vw);
+		opacity:0;
+	}
+}
+
+@keyframes ppimage4 {
+	0% {
+		transform: translateX(-20vw);
+		opacity:1;
+	}
+	65% {
+		opacity:1;
+	}
+	80% {
+		opacity:0;
+	}
+	100% {
+		transform: translateX(180vw);
+		opacity:0;
+	}
+}
+@keyframes ppimage5 {
+	0% {
+		transform: translateX(-20vw);
+		opacity:1;
+	}
+	65% {
+		opacity:1;
+	}
+	80% {
+		opacity:0;
+	}
+	100% {
+		transform: translateX(180vw);
+		opacity:0;
+	}
+}
+@keyframes ppimage6 {
+	0% {
+		transform: translateX(-20vw);
+		opacity:1;
+	}
+	65% {
+		opacity:1;
+	}
+	80% {
+		opacity:0;
+	}
+	100% {
+		transform: translateX(180vw);
+		opacity:0;
+	}
+}
+
+.messagebutton {
+	display: inherit;
+	position: relative;
+	color:white;
+	text-decoration: underline;
+	height:auto;
+	width: 10%;
+	left:81%;
+}
+.messagebutton:hover {
+	animation: messagebutton 10s linear infinite;
+	transition-duration: 0.5s;
+}
+
+@keyframes messagebutton {
+	0% {
+		color:white;
+	}
+	10% {
+		color:rgb(255, 0, 0);
+	}
+	20% {
+		color:rgb(255, 153, 0);
+	}
+	30% {
+		color:rgb(251, 255, 0);
+	}
+	40% {
+		color:rgb(72, 255, 0);
+	}
+	50% {
+		color:rgb(0, 255, 221);
+	}
+	60% {
+		color:rgb(0, 38, 255);
+	}
+	70% {
+		color:rgb(132, 0, 255);
+	}
+	80% {
+		color:rgb(255, 0, 234);
+	}
+	90% {
+		color:rgb(255, 0, 98);
+	}
+	100% {
+		color:rgb(255, 255, 255);
+	}
+}
+
+.stargif {
+	width:30%;
+	display: inline-flex;
+}
+.stargif2 {
+	width:30%;
+	left:4%;
+	display: inline-flex;
+	position: relative;
 }
