--- a/mobile.css
+++ b/mobile.css
@@ -46,18 +46,46 @@ h1 {
 
 .form {
     display:block;
-    position: relative;
+    position: absolute;
     z-index: 100;
     background-color: transparent;
     justify-content: center;
     align-items: center;
     color:white;
     mix-blend-mode: difference;
-    margin-top:145%;
-	margin-bottom:35%;
-	right:10%;
+    margin-top:25%;
+	right:5%;
+	left:8%;
+}
+
+.contact1 {
+	color:white;
+	display: block;
+	position: relative;
+	font-size: 8vw;
+	margin-top:120%;
+	width:70%;
+	margin-bottom:0%;
+	
+}
+
+.form1 {
+    display:block;
+    position: relative;
+    z-index: 100;
+    background-color: transparent;
+    justify-content: center;
+    align-items: center;
+    width:fit-content;
+    height: fit-content;
+    top:60%;
+    margin-top: 5%;
+    
 
 }
+
+
+
 .form:hover {
     mix-blend-mode: normal;
 }
@@ -77,24 +105,7 @@ h1 {
     mix-blend-mode: normal;
 }
 
-.contact1 {
-	color:white;
-}
 
-.form1 {
-    display:block;
-    position: relative;
-    z-index: 100;
-    background-color: transparent;
-    justify-content: center;
-    align-items: center;
-    width:fit-content;
-    height: fit-content;
-    top:60%;
-    margin-top: 60%;
-    left:20%;
-
-}
 .about1 {
 	width:100%;
 	left:0;
@@ -133,6 +144,7 @@ h1 {
 	font-size: 40vw; 
 	z-index: 10;
 	overflow: visible;
+	margin-bottom:1%;
 }
 
 .abouttext2 {
@@ -142,20 +154,29 @@ h1 {
 	top: 24%;
 	height: 30%;
 	color: white;
-	font-size: 10vw;  
+	font-size: 5vw;  
 	z-index: 10;
 	overflow: visible;
 }
+.aboutimg1 {
+	width:70%;
+	left:5%;
+	position: relative;
+	display: auto;
+	margin-bottom: 5%;
+}
 .abouttext22 {
 	width: 70%;
-	right: 5%;
+	left: 7%;
 	position: relative;
-	height: auto;
-	margin-top:0%;
+	top: 24%;
+	height: 30%;
 	color: white;
-	font-size: 3vw;  
+	font-size: 5vw;  
 	z-index: 10;
 	overflow: visible;
+	text-align: end;
+	padding-bottom:20%;
 }
 .abouttext3 {
 	width: 60%;
@@ -166,6 +187,12 @@ h1 {
 	font-size: 15vw;  
 	z-index: 10;
 	overflow: visible;
+}
+
+.aboutdivmain {
+	position: absolute;
+	display: block;
+	top:0;
 }
 .abouttext5 {
 	width: 60%;
@@ -670,20 +697,7 @@ a {
 
 
 
-.contact {
-	width:80%;
-	left:10%;
-	top:70%;
-	align-items: center;
-	justify-content: center;
-	display:block;
-	position: relative;
-}
-.contact1 {
-	width: 100%;
-	font-size: 10vw;
-	color: aliceblue;
-}
+
 
 .scrolllogo { 
 	position: absolute;
@@ -979,4 +993,14 @@ a {
 	100% {
 		opacity:1;
 	}
+}
+.stargif {
+	width:30%;
+	display: inline-flex;
+}
+.stargif2 {
+	width:60%;
+	left:12%;
+	display: inline-flex;
+	position: relative;
 }
